# portfolizer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  example.env  pyproject.toml  pytest.ini
.github/workflows/: deploy.dev.yml  deploy.prod.yml
apps/common/: context_processors.py  utils.py  validators.py  views.py
apps/common/templatetags/: color.py  svg.py
apps/common/tests/: test_color_template_filter.py  test_context_processors.py  test_max_file_size_validator.py  test_svg_template_tag.py
apps/portfolio/: context_processors.py  service.py  translation.py  validators.py
apps/portfolio/admin/: education_inline.py  employment_inline.py  internship_inline.py  language_inline.py  link_inline.py  portfolio_admin.py  project_inline.py  skill_inline.py
apps/portfolio/fixtures/: education.yaml  employment.yaml  internship.yaml  language.yaml  link.yaml  portfolio.yaml  project.yaml  skill.yaml
apps/portfolio/migrations/: 0003_alter_portfolio_address_label_and_more.py  0004_portfolio_birthday.py  0005_portfolio_seventh_left_segment_and_more.py  0006_reorder_left_segments.py  0007_portfolio_about_me_segment_title_and_more.py  0008_portfolio_left_column_bg_color_and_more.py  0009_portfolio_edit_btn_bg_color_and_more.py  0010_alter_portfolio_about_me_segment_title_and_more.py  0011_education_degree_en_education_degree_sr_and_more.py  0012_portfolio_language_btn_bg_color_and_more.py  0013_rename_technologies_project_tools_and_more.py  0014_alter_education_options_alter_employment_options_and_more.py
apps/portfolio/models/: __init__.py  address.py  contact.py  education.py  employment.py  internship.py  left_portfolio_column_mixin.py  personal_details.py  portfolio.py  project.py  right_portfolio_column_mixin.py  segments.py  skill.py
apps/portfolio/templates/portfolio/: portfolio.html  (+1 more)
apps/portfolio/tests/: factories.py  test_context_processors.py  test_portfolio.py  test_portfolio_admin.py  test_portfolio_pdf_view.py  test_service.py  test_slug_blacklist_validator.py
apps/portfolio/views/: portfolio_pdf_view.py
apps/user/: context_processors.py  decorators.py
apps/user/admin/: user_admin.py
apps/user/fixtures/: user.yaml
apps/user/forms/: registration_form.py
apps/user/tests/: test_context_processors.py  test_login_view.py  test_registration_view.py
apps/user/views/: __init__.py  login_view.py  registration_view.py
portfolizer/: urls.py  views.py
portfolizer/settings/: common.py
portfolizer/tests/: test_index_view.py
scripts/: entrypoint
static/css/: 404.css  base.css  flash_message.css  footer.css  form.css  index.css  legal.css  nav.css  privacy_policy.css
static/js/: footer.js  menu-modal.js
templates/: 404.html  base.html  index.html  privacy_policy.html  terms_&_conditions.html
templates/includes/: input_field.html  language_dropdown.html  messages.html  nav.html
(+27 files in other folders)
