[tool.poetry]
name = "portfolizer"
version = "1.0.1"
description = ""
authors = ["Miloš Roknić <roknic.milos.994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-extensions = "^3.2.3"
django-pdf-view = "^3.0.2"
gunicorn = "^23.0.0"
pillow = "^10.4.0"
python-decouple = "^3.8"
sentry-sdk = { extras = ["django"], version = "^2.19.2" }
django-health-check = "^3.18.3"
django-analytical = "^3.1.0"
django-smart-fixtures = "^2.0.2"
psycopg2 = "^2.9.10"
django-colorfield = "^0.11.0"
django-admin-interface = "^0.29.2"
django-modeltranslation = "^0.19.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"
factory-boy = "^3.3.1"
pytest-xdist = "^3.6.1"

[tool.poetry.group.local.dependencies]
ruff = "^0.8.4"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
preview = true
lint.select = [
    "E501", # enforce line length
    "Q000", # enforce double quotes
    "F401", # enforce used imports only
]
exclude = [
    "**/migrations/*",
]

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "tests.py",
    "portfolizer/wsgi.py",
    "portfolizer/asgi.py",
    "portfolizer/urls.py",
    "portfolizer/settings/*",
    "manage.py"
]

[tool.coverage.report]
fail_under = 99
